--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -4,97 +4,73 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <FrameLayout
-        android:id="@+id/fragment_player_frameLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:weightSum="1.0">
-        <LinearLayout
-            android:id="@+id/fragment_player_linearLayout"
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-            <ImageView
-                android:id="@+id/fragment_player_imageViewAlbumArt"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="fitStart"
-                android:adjustViewBounds="true"
-                android:src="@drawable/Icon" />
-            <TextView
-                android:id="@+id/fragment_player_lblArtistName"
-                android:text="[ArtistName]"
-                android:background="#AA000000"
-                android:textColor="#ffffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:padding="6dip" />
-            <TextView
-                android:id="@+id/fragment_player_lblAlbumTitle"
-                android:text="[AlbumTitle]"
-                android:background="#AA000000"
-                android:textColor="#ffffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:padding="6dip" />
-            <TextView
-                android:id="@+id/fragment_player_lblSongTitle"
-                android:text="[SongTitle]"
-                android:background="#AA000000"
-                android:textColor="#ffffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:padding="6dip" />
-            <TextView
-                android:id="@+id/fragment_player_lblPosition"
-                android:text="0:00.000"
-                android:background="#AA000000"
-                android:textColor="#ffffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:padding="6dip" />
-            <TextView
-                android:id="@+id/fragment_player_lblLength"
-                android:text="0.00:000"
-                android:background="#AA000000"
-                android:textColor="#ffffffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:padding="6dip" />
-            <SeekBar
-                android:id="@+id/fragment_player_seekBar"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
-            <LinearLayout
-                android:id="@+id/fragment_player_linearLayoutButtons"
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-                <Button
-                    android:id="@+id/fragment_player_btnPrevious"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Previous"
-                    android:padding="20dp" />
-                <Button
-                    android:id="@+id/fragment_player_btnPlayPause"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Pause"
-                    android:padding="20dp" />
-                <Button
-                    android:id="@+id/fragment_player_btnNext"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Next"
-                    android:padding="20dp" />
-            </LinearLayout>
-        </LinearLayout>
-    </FrameLayout>
+  <LinearLayout
+      android:id="@+id/fragment_player_layoutPosition"
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/fragment_player_lblPosition"
+        android:text="0:00.000"
+        android:background="#AA000000"
+        android:textColor="#ffffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:padding="6dip" />
+    <SeekBar
+        android:id="@+id/fragment_player_seekBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+    <TextView
+        android:id="@+id/fragment_player_lblLength"
+        android:text="0.00:000"
+        android:background="#AA000000"
+        android:textColor="#ffffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:padding="6dip" />
+  </LinearLayout>
+  <FrameLayout
+      android:id="@+id/fragment_player_linearLayoutSubviews"
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:background="#00FF00">
+    <ImageView
+      android:id="@+id/fragment_player_imageViewAlbumArt"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:scaleType="fitStart"
+      android:adjustViewBounds="true"      
+      android:background="#FF0000"
+      android:src="@drawable/Icon" />
+  </FrameLayout>
+  <LinearLayout
+      android:id="@+id/fragment_player_linearLayoutButtons"
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
+    <Button
+        android:id="@+id/fragment_player_btnPrevious"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Previous"
+        android:padding="20dp" />
+    <Button
+        android:id="@+id/fragment_player_btnPlayPause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pause"
+        android:padding="20dp" />
+    <Button
+        android:id="@+id/fragment_player_btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"
+        android:padding="20dp" />
+  </LinearLayout>
 </LinearLayout>
