--- a/MPfm/MPfm.Android/Resources/Layout/PlayerMetadata.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/PlayerMetadata.axml
@@ -3,4 +3,31 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+  <TextView
+    android:id="@+id/fragment_player_lblArtistName"
+    android:text="[ArtistName]"
+    android:background="#AA000000"
+    android:textColor="#ffffffff"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:padding="6dip" />
+  <TextView
+      android:id="@+id/fragment_player_lblAlbumTitle"
+      android:text="[AlbumTitle]"
+      android:background="#AA000000"
+      android:textColor="#ffffffff"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:gravity="center_horizontal"
+      android:padding="6dip" />
+  <TextView
+      android:id="@+id/fragment_player_lblSongTitle"
+      android:text="[SongTitle]"
+      android:background="#AA000000"
+      android:textColor="#ffffffff"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:gravity="center_horizontal"
+      android:padding="6dip" />
 </LinearLayout>
