Android: Now hiding fragments instead of recreating them. Added icons for all resolution types.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/Main.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Main.axml
@@ -3,7 +3,7 @@
     android:id="@+id/main_fragment_container"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FF0000">
+    android:background="#FFFFFF">
   <android.support.v4.view.ViewPager
       android:id="@+id/main_pager"
       android:layout_width="fill_parent"
@@ -14,7 +14,7 @@
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="top"
-          android:background="#333333"
+          android:background="#465966"
           android:textColor="#fff"
           android:paddingTop="4dp"
           android:paddingBottom="4dp" />
