--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -3,7 +3,8 @@
     android:id="@+id/fragment_player_mainLayout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#20282E">
   <LinearLayout
       android:id="@+id/fragment_player_layoutPosition"
       android:orientation="horizontal"
@@ -11,8 +12,7 @@
       android:layout_height="wrap_content">
     <TextView
         android:id="@+id/fragment_player_lblPosition"
-        android:text="0:00.000"
-        android:background="#AA000000"
+        android:text="0:00.000"        
         android:textColor="#ffffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,8 +25,7 @@
         android:layout_weight="1" />
     <TextView
         android:id="@+id/fragment_player_lblLength"
-        android:text="0.00:000"
-        android:background="#AA000000"
+        android:text="0.00:000"        
         android:textColor="#ffffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,14 +38,14 @@
       android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
-      android:background="#00FF00">
+      android:background="#00000000">
     <ImageView
       android:id="@+id/fragment_player_imageViewAlbumArt"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:scaleType="fitStart"
       android:adjustViewBounds="true"      
-      android:background="#FF0000"
+      android:background="#00000000"
       android:src="@drawable/Icon" />
   </FrameLayout>
   <LinearLayout
