--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_player_mainLayout"
+    android:id="@+id/player_mainLayout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#20282E">
   <LinearLayout
-      android:id="@+id/fragment_player_layoutPosition"
+      android:id="@+id/player_layoutPosition"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
     <TextView
-        android:id="@+id/fragment_player_lblPosition"
+        android:id="@+id/player_lblPosition"
         android:text="0:00.000"        
         android:textColor="#ffffffff"
         android:layout_width="wrap_content"
@@ -19,12 +19,13 @@
         android:gravity="center_horizontal"
         android:padding="6dip" />
     <SeekBar
-        android:id="@+id/fragment_player_seekBar"
+        android:id="@+id/player_seekBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:max="100" />
     <TextView
-        android:id="@+id/fragment_player_lblLength"
+        android:id="@+id/player_lblLength"
         android:text="0.00:000"        
         android:textColor="#ffffffff"
         android:layout_width="wrap_content"
@@ -32,41 +33,53 @@
         android:gravity="center_horizontal"
         android:padding="6dip" />
   </LinearLayout>
+  <LinearLayout
+      android:id="@+id/player_layoutWaveForm"
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="120dp">
+  </LinearLayout>
   <FrameLayout
-      android:id="@+id/fragment_player_linearLayoutSubviews"
+      android:id="@+id/player_linearLayoutSubviews"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:background="#00000000">
     <ImageView
-      android:id="@+id/fragment_player_imageViewAlbumArt"
+      android:id="@+id/player_imageViewAlbumArt"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
+      android:gravity="center"
       android:scaleType="fitStart"
       android:adjustViewBounds="true"      
-      android:background="#00000000"
-      android:src="@drawable/Icon" />
+      android:background="#00000000" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/player_pager"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"        
+        android:background="#AA000000">
+    </android.support.v4.view.ViewPager>
   </FrameLayout>
   <LinearLayout
-      android:id="@+id/fragment_player_linearLayoutButtons"
+      android:id="@+id/player_layoutButtons"
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
     <Button
-        android:id="@+id/fragment_player_btnPrevious"
+        android:id="@+id/player_btnPrevious"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Previous"
         android:padding="20dp" />
     <Button
-        android:id="@+id/fragment_player_btnPlayPause"
+        android:id="@+id/player_btnPlayPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pause"
         android:padding="20dp" />
     <Button
-        android:id="@+id/fragment_player_btnNext"
+        android:id="@+id/player_btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next"
