--- a/MPfm/MPfm.Android/Resources/Layout/PlayerMetadata.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/PlayerMetadata.axml
@@ -2,29 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="wrap_content"
+    android:gravity="bottom">
   <TextView
-    android:id="@+id/fragment_player_lblArtistName"
+    android:id="@+id/playerMetadata_lblArtistName"
     android:text="[ArtistName]"
-    android:background="#AA000000"
+    android:textSize="20dp"
+    android:background="#00000000"
     android:textColor="#ffffffff"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:padding="6dip" />
   <TextView
-      android:id="@+id/fragment_player_lblAlbumTitle"
+      android:id="@+id/playerMetadata_lblAlbumTitle"
       android:text="[AlbumTitle]"
-      android:background="#AA000000"
+      android:background="#00000000"
       android:textColor="#ffffffff"
+      android:textSize="18dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:padding="6dip" />
   <TextView
-      android:id="@+id/fragment_player_lblSongTitle"
+      android:id="@+id/playerMetadata_lblSongTitle"
       android:text="[SongTitle]"
-      android:background="#AA000000"
+      android:textSize="14dp"
+      android:background="#00000000"
       android:textColor="#ffffffff"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
