--- a/MPfm/MPfm.Android/Resources/Layout/Splash.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Splash.axml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/splash_layout"
+    android:id="@+id/splash_layout"              
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:background="#20282E">
   <TextView
     android:id="@+id/splash_text"
-    android:text="Loading..."
-    android:background="#AA000000"
-    android:textColor="#ffffffff"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="#00000000"
+    android:text="Loading..."
+    android:textSize="16dp"
+    android:textColor="#ffffffff"
     android:gravity="center_horizontal"
-    android:padding="6dip" />
+    android:padding="12dp" />
 </LinearLayout>
