Android: Added missing fragments that were added in iOS. They are empty for now.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/MainActivity.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MainActivity.axml
@@ -4,7 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FF0000">
+    android:background="#FFFFFF">
     <LinearLayout
         android:id="@+id/main_miniplayer"
         android:orientation="horizontal"
