Android: Now using an activity for Preferences instead of a fragment, since Android doesn't support fragments in fragments (i.e. Fragment with a ViewPager). Changed the way views are loaded with MobileNavigationManager to support Android intents (i.e. not having a reference to a view you create). Extremely infuriating how Android manages view creation compared to iOS.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/Preferences.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Preferences.axml
@@ -7,9 +7,8 @@
   <android.support.v4.view.ViewPager
       android:id="@+id/preferences_pager"
       android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_above="@+id/main_miniplayer">
-    <android.support.v4.view.PagerTitleStrip
+      android:layout_height="fill_parent">
+    <!--<android.support.v4.view.PagerTitleStrip
           android:id="@+id/preferences_pager_title_strip"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
@@ -17,6 +16,6 @@
           android:background="#465966"
           android:textColor="#fff"
           android:paddingTop="4dp"
-          android:paddingBottom="4dp" />
+          android:paddingBottom="4dp" />-->
   </android.support.v4.view.ViewPager>
 </LinearLayout>
