--- a/MPfm/MPfm.Android/Resources/Layout/Preferences.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Preferences.axml
@@ -8,7 +8,7 @@
       android:id="@+id/preferences_pager"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent">
-    <!--<android.support.v4.view.PagerTitleStrip
+    <android.support.v4.view.PagerTitleStrip
           android:id="@+id/preferences_pager_title_strip"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
@@ -16,6 +16,6 @@
           android:background="#465966"
           android:textColor="#fff"
           android:paddingTop="4dp"
-          android:paddingBottom="4dp" />-->
+          android:paddingBottom="4dp" />
   </android.support.v4.view.ViewPager>
 </LinearLayout>
