--- a/MPfm/MPfm.Android/Resources/Layout/MainActivity.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MainActivity.axml
@@ -19,10 +19,12 @@
             android:layout_height="70dp"
             android:src="@drawable/icon" />
         <LinearLayout
-            android:id="@+id/main_miniplayer"
+            android:id="@+id/main_miniplayer_text"
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:paddingLeft="8dp"
+            android:background="#36454F">
             <TextView
                 android:id="@+id/main_miniplayer_lblNowPlaying"
                 android:layout_width="wrap_content"
@@ -53,8 +55,19 @@
                 android:textSize="11dip" />
         </LinearLayout>
     </LinearLayout>
-    <FrameLayout
-        android:id="@+id/main_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+  <android.support.v4.view.ViewPager
+      android:id="@+id/main_pager"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:layout_above="@+id/main_miniplayer">
+    <android.support.v4.view.PagerTitleStrip
+          android:id="@+id/main_pager_title_strip"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:layout_gravity="top"
+          android:background="#465966"
+          android:textColor="#fff"
+          android:paddingTop="4dp"
+          android:paddingBottom="4dp" />
+  </android.support.v4.view.ViewPager>
 </RelativeLayout>
