--- a/MPfm/MPfm.Android/Resources/Layout/Main.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Main.axml
@@ -26,32 +26,25 @@
             android:paddingLeft="8dp"
             android:background="#36454F">
             <TextView
-                android:id="@+id/main_miniplayer_lblNowPlaying"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFFFFFFF"
-                android:text="Now Playing"
-                android:textSize="14dip" />
-            <TextView
                 android:id="@+id/main_miniplayer_lblArtistName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#FFCCCCCC"
-                android:text="[Artist Name]"
-                android:textSize="11dip" />
+                android:textColor="#FFFFFF"
+                android:text=""
+                android:textSize="14dip" />
             <TextView
                 android:id="@+id/main_miniplayer_lblAlbumTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="[Album Title]"
-                android:textColor="#FFCCCCCC"
-                android:textSize="11dip" />
+                android:text=""
+                android:textColor="#EEEEEE"
+                android:textSize="12dip" />
             <TextView
                 android:id="@+id/main_miniplayer_lblSongTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="[Song Title]"
-                android:textColor="#FFCCCCCC"
+                android:text=""
+                android:textColor="#CCCCCC"
                 android:textSize="11dip" />
         </LinearLayout>
     </LinearLayout>
