--- a/MPfm/MPfm.Android/Resources/Layout/Markers.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Markers.axml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+  android:orientation="vertical"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent">
+  <TextView
+    android:id="@+id/markers_lblTitle"
+    android:text="Markers"
+    android:textSize="20dp"
+    android:background="#00000000"
+    android:textColor="#ffffffff"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:padding="6dip" />
+  <ListView
+    android:id="@+id/markers_listView"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@android:color/transparent"
+    android:cacheColorHint="#00000000"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
+    android:clickable="false"
+    android:divider="#00000000"
+    android:listSelector="@android:color/transparent" />
 </LinearLayout>
