--- a/MPfm/MPfm.Android/Resources/Layout/Loops.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Loops.axml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+  android:orientation="vertical"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent">
+  <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    <TextView
+      android:id="@+id/loops_lblTitle"
+      android:text="Loops"
+      android:textSize="20dp"
+      android:textColor="#ffffffff"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:gravity="center_horizontal"
+      android:padding="6dip" />
+    <Button
+      android:id="@+id/loops_btnAdd"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentRight="true"
+      android:background="#33000000"
+      android:text="Add"
+      android:textColor="#ffffffff"
+      android:padding="8dp" />
+  </RelativeLayout>
+  <ListView
+    android:id="@+id/loops_listView"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@android:color/transparent"
+    android:cacheColorHint="#00000000"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
+    android:clickable="false"
+    android:divider="#00000000"
+    android:listSelector="@android:color/transparent" />
 </LinearLayout>
