--- a/MPfm/MPfm.Android/Resources/Layout/Markers.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Markers.axml
@@ -3,16 +3,28 @@
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
-  <TextView
-    android:id="@+id/markers_lblTitle"
-    android:text="Markers"
-    android:textSize="20dp"
-    android:background="#00000000"
-    android:textColor="#ffffffff"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:padding="6dip" />
+  <RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    <TextView
+      android:id="@+id/markers_lblTitle"
+      android:text="Markers"
+      android:textSize="20dp"
+      android:textColor="#ffffffff"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:gravity="center_horizontal"
+      android:padding="6dip" />
+    <Button
+      android:id="@+id/markers_btnAdd"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentRight="true"
+      android:background="#33000000"
+      android:text="Add"
+      android:textColor="#ffffffff"
+      android:padding="8dp" />
+  </RelativeLayout>
   <ListView
     android:id="@+id/markers_listView"
     android:layout_width="fill_parent"
