--- a/MPfm/MPfm.Android/Resources/Layout/PitchShifting.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/PitchShifting.axml
@@ -1,6 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+  android:orientation="vertical"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent">
+  <TextView
+    android:id="@+id/pitchShifting_lblTitle"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:text="Pitch Shifting"
+    android:textSize="20dp"
+    android:textColor="#ffffffff"
+    android:padding="6dip" />
+  <RelativeLayout
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="wrap_content"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
+    <TextView
+      android:id="@+id/pitchShifting_lblCurrentInterval"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentLeft="true"
+      android:gravity="left"
+      android:text="Interval (semitones):"
+      android:textSize="14dp"
+      android:textColor="#ffffffff"
+      android:textStyle="bold" />
+    <TextView
+      android:id="@+id/pitchShifting_lblNewKey"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentRight="true"
+      android:gravity="right"
+      android:text="New key:"
+      android:textSize="14dp"
+      android:textColor="#ffffffff"
+      android:textStyle="bold" />
+  </RelativeLayout>
+  <RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
+    <TextView
+      android:id="@+id/pitchShifting_lblCurrentIntervalValue"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentLeft="true"
+      android:gravity="left"
+      android:text="0"
+      android:textSize="14dp"
+      android:textColor="#ffffffff" />
+    <TextView
+      android:id="@+id/pitchShifting_lblNewKeyValue"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentRight="true"
+      android:gravity="right"
+      android:text="C"
+      android:textSize="14dp"
+      android:textColor="#ffffffff" />
+  </RelativeLayout>
+  <LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:padding="8dp">
+    <SeekBar
+      android:id="@+id/pitchShifting_seekBar"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:max="100" />
+  </LinearLayout>
+  <LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:padding="8dp">
+    <Button
+      android:id="@+id/pitchShifting_btnIncrement"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentRight="true"
+      android:text="-"
+      android:textColor="#ffffffff"
+      android:padding="8dp" />
+    <Button
+      android:id="@+id/pitchShifting_btnDecrement"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentRight="true"
+      android:text="+"
+      android:textColor="#ffffffff"
+      android:padding="8dp" />
+    <Button
+      android:id="@+id/pitchShifting_btnReset"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentRight="true"
+      android:text="Reset"
+      android:textColor="#ffffffff"
+      android:padding="8dp" />
+  </LinearLayout>
 </LinearLayout>
